<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schema.android.com/tools"
    android:fillViewport="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".Main"
        android:background="@color/background_layout">
        <ImageView
            android:src="@drawable/main_foodexpress"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/llButoes"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
            <Button
                android:id="@+id/btnCardapio"
                android:text="@string/btnCardapio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:textSize="@dimen/fonte_botao_menu"
                android:textColor="@color/fonte_botao_menu"
                android:background="@color/background_botao"
            />
            <Button
                android:id="@+id/btnPedidos"
                android:text="@string/btnPedidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:textSize="@dimen/fonte_botao_menu"
                android:textColor="@color/fonte_botao_menu"
                android:background="@color/background_botao"
            />
            <Button
                android:id="@+id/btnEnderecos"
                android:text="@string/btnEnderecos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:textSize="@dimen/fonte_botao_menu"
                android:textColor="@color/fonte_botao_menu"
                android:background="@color/background_botao"
                android:visibility="gone"
            />
            <Button
                android:id="@+id/btnFechar"
                android:text="@string/btnFechar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:textSize="@dimen/fonte_botao_menu"
                android:textColor="@color/fonte_botao_menu"
                android:background="@color/background_botao"
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>